[gd_scene load_steps=6 format=3 uid="uid://c12rg84b7fh8n"]

[ext_resource type="Script" path="res://scripts/battle_overlay.gd" id="1_hg4h1"]
[ext_resource type="PackedScene" uid="uid://dtb62lmeic5he" path="res://scenes/virus_dish.tscn" id="2_vdhmb"]
[ext_resource type="Texture2D" uid="uid://dsr8bbxyerst8" path="res://sprites/attribute_icons1.png" id="3_s4tti"]
[ext_resource type="Texture2D" uid="uid://bb4deq7k0lb8u" path="res://sprites/attribute_icons2.png" id="4_4778b"]
[ext_resource type="Texture2D" uid="uid://dmcs4qedo4ln6" path="res://sprites/attribute_icons3.png" id="5_k2b75"]

[node name="battle_overlay" type="Node2D"]
script = ExtResource("1_hg4h1")

[node name="virus_dish" parent="." instance=ExtResource("2_vdhmb")]
position = Vector2(800, 288)

[node name="attack" type="Button" parent="."]
offset_left = 64.0
offset_top = 544.0
offset_right = 256.0
offset_bottom = 608.0
text = "Attack!
(-50 ATP)"
icon = ExtResource("3_s4tti")

[node name="defend" type="Button" parent="."]
offset_left = 320.0
offset_top = 544.0
offset_right = 512.0
offset_bottom = 608.0
text = "Fortify Organelle
(-30 ATP)"
icon = ExtResource("4_4778b")

[node name="heal" type="Button" parent="."]
offset_left = 576.0
offset_top = 544.0
offset_right = 768.0
offset_bottom = 608.0
text = "Repair Organelle
(-40 ATP)"
icon = ExtResource("5_k2b75")

[node name="end_turn" type="Button" parent="."]
offset_left = 832.0
offset_top = 544.0
offset_right = 1024.0
offset_bottom = 608.0
text = "End Round"

[node name="level" type="RichTextLabel" parent="."]
offset_left = 896.0
offset_top = 96.0
offset_right = 1016.0
offset_bottom = 136.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Level 1"

[connection signal="pressed" from="attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="heal" to="." method="_on_heal_pressed"]
[connection signal="pressed" from="end_turn" to="." method="_on_end_turn_pressed"]
